feat(day22): add comprehensive guide, docker cluster, configs, and test scripts for Hive Storage Formats and ACID